@@ -1,7 +1,7 @@
 Source: globus-gridftp-server-control
 Priority: optional
 Maintainer: Mattias Ellert <mattias.ellert@fysast.uu.se>
-Build-Depends: debhelper (>= 5), autotools-dev, quilt, libglobus-xio-pipe-driver-dev (>= 2), libglobus-common-dev (>= 14), libglobus-xio-gsi-driver-dev (>= 2), libglobus-xio-dev (>= 3), libglobus-gss-assist-dev (>= 8), pkg-config
+Build-Depends: debhelper (>= 5), autotools-dev, quilt, libglobus-xio-pipe-driver-dev (>= 2), libglobus-common-dev (>= 14), libglobus-xio-gsi-driver-dev (>= 2), libglobus-xio-dev (>= 6), libglobus-gss-assist-dev (>= 8), pkg-config
 Standards-Version: 3.9.0
 Section: net
 DM-Upload-Allowed: yes
