@@ -1,3 +1,9 @@
+globus-gridftp-server-control (7.1-1+gt6.@distro@) @distro@; urgency=low
+
+  * Use allow_binary flag with telnet driver
+
+ -- Globus Toolkit <support@globus.org>  Tue, 30 Jul 2019 18:37:15 +0000
+
 globus-gridftp-server-control (7.0-1+gt6.@distro@) @distro@; urgency=low
 
   * add support for x.abspath
